fix: dark mode nav (all items inside of it) add: new colors --> color utilities edit: nav bar layout

--- a/front/styles/global.css
+++ b/front/styles/global.css
@@ -9,9 +9,18 @@ select.select-language {
   background-color: transparent;
   border-radius: 5px;
   text-transform: uppercase;
+  padding: .5rem .25rem;
+  transition: all .25s;
 }
 select.select-language:hover {
   cursor: pointer;
+  background-color: #edf2f7;
+}
+/* select language dark mode */
+select.select-language:hover.dark {
+  cursor: pointer;
+  background-color: #2d3748;
+  color: white;
 }
 
 /*=============== STAR ===============*/
